--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,7 +50,8 @@ dependencies:
   intl: ^0.18.1
   web_socket_channel: ^2.4.0
   flutter_overlay: ^1.0.0
-
+  provider: ^6.0.5
+  url_launcher: ^6.1.14
 dev_dependencies:
   flutter_test:
     sdk: flutter
