--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,4 @@
+task assemble {}
 buildscript {
     ext.kotlin_version = '1.7.10'
     repositories {
@@ -6,6 +7,7 @@ buildscript {
         maven { url 'https://maven.aliyun.com/repository/google' }
         maven { url 'https://maven.aliyun.com/repository/jcenter' }
         maven { url 'https://maven.aliyun.com/nexus/content/groups/public' }
+        maven { url 'https://maven.aliyun.com/repository/gradle-plugin'}
     }
 
     dependencies {
@@ -21,6 +23,7 @@ allprojects {
         maven { url 'https://maven.aliyun.com/repository/google' }
         maven { url 'https://maven.aliyun.com/repository/jcenter' }
         maven { url 'https://maven.aliyun.com/nexus/content/groups/public' }
+        maven { url 'https://maven.aliyun.com/repository/gradle-plugin'}
     }
 }
 
